@@ -19,3 +19,4 @@ e.g. esp3Hardware (camel case) defined in setup/EnOceanESP3.js corresponds to es
 <kodi-hardware ng-if="$ctrl.hardware.Type === 55" hardware="$ctrl.hardware"></kodi-hardware>
 <panasonic-tv-hardware ng-if="$ctrl.hardware.Type === 69" hardware="$ctrl.hardware"></panasonic-tv-hardware>
 <ble-box-hardware ng-if="$ctrl.hardware.Type === 82" hardware="$ctrl.hardware"></ble-box-hardware>
+<mqttad-Hardware ng-if="$ctrl.hardware.Type === 125" hardware="$ctrl.hardware"></mqttad-Hardware>
