@@ -7,6 +7,7 @@ define([
     'hardware/setup/PanasonicTV',
     'hardware/setup/Pinger',
     'hardware/setup/WakeOnLan',
+    'hardware/setup/MQTT-AD',
     'hardware/setup/ZWave',
 ], function (app) {
     app.controller('HardwareSetupController', function ($routeParams, domoticzApi) {
