@@ -1,0 +1,38 @@
+<div id="hardwarecontent" class="container">
+    <div class="page-header-small">
+        <table border="0" cellpadding="0" cellspacing="0" width="100%">
+            <tr>
+                <td>
+                    <h1 data-i18n="Configuration">Configuration</h1>
+                </td>
+            </tr>
+        </table>
+    </div>
+    <table class="display" id="numberstable" border="0" cellpadding="0" cellspacing="0" width="100%">
+        <thead>
+        <tr>
+            <th width="250" align="left" data-i18n="Device">Device</th>
+            <th align="left" data-i18n="Name">Name</th>
+            <th width="100" align align="left" data-i18n="Value">Value</th>
+            <th width="100" align align="left" data-i18n="Unit">Unit</th>
+        </tr>
+        </thead>
+    </table>
+    <input type="hidden" id="idx" name="idx" value="-1">
+    <table id="updelclr" border="0" cellpadding="0" cellspacing="0" width="100%">
+        <tr>
+            <td align="right">
+                <a class="btnstyle3" id="nodelistrefresh" data-i18n="Refresh" onclick="RefreshConfiguration();">Refresh</a>
+            </td>
+        </tr>
+    </table>
+    <br>
+    <table class="display" id="numbervaluetable" border="0" cellpadding="0" cellspacing="20">
+        <tr>
+            <td align="right" style="width:80px"><label for="numval"><span data-i18n="Value"></span>:</label></td>
+            <td><input type="number" id="numval" style="width: 60px; padding: .2em;" class="text ui-widget-content ui-corner-all">&nbsp;
+			<span id="numunit"></span>&nbsp;
+			<a id="numberupdate" class="btnstyle3" onclick="UpdateValue();" data-i18n="Update"></a></td>
+        </tr>
+    </table>
+</div>
